Update activity endpoint for admin
